--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="container d-flex justify-content-between align-items-center">
 
       <div class="logo">
-        <h1 class="text-light"><a href="index.html"><span>OLADELE BLOG</span></a></h1>
+        <h1 class="text-light"><a href="index.html"><span>OLADELE BLOGs</span></a></h1>
       </div>
 
       <nav id="navbar" class="navbar">
@@ -61,7 +61,7 @@
         <div class="carousel-container">
           <h2 class="animate__animated animate__fadeInDown">Welcome to <span>Oladele-Adeboyejo blog</span></h2>
           <p class="animate__animated animate__fadeInUp">The curren media environment both encourages and perpetuates these reactions
-            because, after all, it's good for business rather than report on real stories and issues, the media find it much
+            because, after all, it's good for businesses rather than report on real stories and issues, the media find it much
             easier(and more profitable)</p>
           <a href="" class="btn-get-started animate__animated animate__fadeInUp">Read More</a>
         </div>
@@ -73,7 +73,7 @@
           <h2 class="animate__animated animate__fadeInDown">VICTIMHOOD</h2>
           <p class="animate__animated animate__fadeInUp">The responsibility/fault fallacy allow people to pass off the 
             responsibility for solving their problem to others. This ability to alleviate responsibilty through blame
-          gives people  a temporary high and a feeling of moral righteousness.</p>
+          give people  a temporary high and a feeling of moral righteousness.</p>
           <a href="" class="btn-get-started animate__animated animate__fadeInUp">Read More</a>
         </div>
       </div>
@@ -84,7 +84,7 @@
           <h2 class="animate__animated animate__fadeInDown">OBSESSIVE COMPULSIVE DISORDER-OCD</h2>
           <p class="animate__animated animate__fadeInUp">OCD- Is a terrible neurological and genetic disorder that 
             cannot be cured. At best,it can be managed. And, as we'll see, managing the disorder comes down to managing
-            ones values.</p>
+            ones value.</p>
           <a href="" class="btn-get-started animate__animated animate__fadeInUp">Read More</a>
         </div>
       </div>
